# cybersigils

./: cybersigils.cabal
app/: Main.hs
